[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/Enemys/GhostHunter/Scripts/GhostHunter.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/3.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/4.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/6.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/8.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/7.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/5.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/4.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/6.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/3.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/7.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/5.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/1.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/2.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Enemys/GhostHunter/Assets/Hurt/8.png" type="Texture" id=17]
[ext_resource path="res://Assets/Enemy/enemy-death/enemy-death-1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Enemy/enemy-death/enemy-death-4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Enemy/enemy-death/enemy-death-3.png" type="Texture" id=20]
[ext_resource path="res://Assets/Enemy/enemy-death/enemy-death-5.png" type="Texture" id=21]
[ext_resource path="res://Assets/Enemy/enemy-death/enemy-death-2.png" type="Texture" id=22]

[sub_resource type="CircleShape2D" id=1]
radius = 29.9808

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.0093, 611.619 )

[sub_resource type="CircleShape2D" id=6]
radius = 32.2163

[node name="GhostHunter" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 21 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -4.43216, 14.9585 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "move"
playback_speed = 0.7
anims/Death = SubResource( 2 )
anims/Hurt = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="area" type="Area2D" parent="."]
z_index = 5
collision_layer = 7
collision_mask = 7

[node name="shape" type="CollisionPolygon2D" parent="area"]
position = Vector2( -30, 0 )
polygon = PoolVector2Array( -5.20947, 601.521, -156.247, 589.191, -341.191, 499.802, -467.569, 379.588, -547.712, 247.045, -600.112, 71.3484, -593.948, -92.0187, -556.959, -230.048, -461.404, -387.25, -322.697, -507.464, -156.247, -584.524, -2.12708, -606.101 )

[node name="area2" type="Area2D" parent="."]
rotation = 3.14159
z_index = 5
collision_layer = 7
collision_mask = 7

[node name="shape" type="CollisionPolygon2D" parent="area2"]
position = Vector2( -30, 0 )
polygon = PoolVector2Array( -5.20947, 601.521, -156.247, 589.191, -341.191, 499.802, -467.569, 379.588, -547.712, 247.045, -600.112, 71.3484, -593.948, -92.0187, -556.959, -230.048, -461.404, -387.25, -322.697, -507.464, -156.247, -584.524, -2.12708, -606.101 )

[node name="area3" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="area3"]
shape = SubResource( 5 )

[node name="Damage" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="shape" type="CollisionShape2D" parent="Damage"]
position = Vector2( -4.06137, 14.6209 )
shape = SubResource( 6 )
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
[connection signal="body_entered" from="area2" to="." method="_on_area2_body_entered"]
[connection signal="body_exited" from="area2" to="." method="_on_area2_body_exited"]
[connection signal="body_entered" from="area3" to="." method="_on_area3_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
